# nsbuild

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: test_and_coverage.yml
data/: BuildConfig.hxx  CyclicHeaderMapBegin.html  EnumStringHash.hxx  Enums.schema.json  FlagType.hxx  HeaderMapBegin.html  HeaderMapEnd.html  ModuleConfig.cxx  ModuleConfig.hxx  TopoHeaderMapBegin.html  TopoHeaderMapEnd.html  d3-dag.iife.min.js
data/vs/: CMakeSettings.json
docs/: Usage.md  help.ns  structure.md  tasks.vs.json
include/: nsbuild.h  nsbuildcmds.h  nscmake.h  nscmake_conststr.h  nscmakeinfo.h  nscmdcommon.h  nscommon.h  nscompiler.h  nsconfig.h  nsenums.h  nsfetch.h  nsframework.h  nsglob.h  nsheader_map.h  nshelp.h  nside.h  nsinstallers.h  nsinterface.h  nslog.h  nsmacros.h  nsmodule.h  nsparams.h  nspreset.h  nsprocess.h  nspython.h  nsregistry.h  nstarget.h  nsvars.h
scripts/: copy_media.py  enums.py  help.ns  json_patcher.py  lum_utils.py  structure.md
src/: main.cpp  nsbuild.cpp  nsbuild_registry.cpp  nsbuildcmds.cpp  nscmake.cpp  nscommon.cpp  nsenums.cpp  nsframework.cpp  nsglob.cpp  nsheader_map.cpp  nshelp.cpp  nside.cpp  nsinstallers.cpp  nsmacros.cpp  nsmodule.cpp  nsparams.cpp  nspreset.cpp  nsprocess.cpp  nsvars.cpp
test_data/: Build.ns
test_data/source/: Build.ns  CMakePresets.json
test_data/source/Frameworks/Main/ModuleB/: Module.ns
test_data/source/Frameworks/Main/ModuleB/src/: Main.cpp
utils/: CMakeLists.txt  CMakePresets.json  build.bat  build.py  tasks.vs.json
